# flamerobin

./: .editorconfig  .gitignore  .gitmodules  BUILD.md  BUILD.txt  Bakefiles.bkgen  CMakeLists.txt  CODE_OF_CONDUCT.md  GNUmakefile  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.suncc  README.md  README.txt  ROADMAP.md  SECURITY_ROADMAP.md  aclocal.m4  autoconf_inc.m4  bakefile_gen_vs2010.cmd  config.sub  configure  configure.ac  configure.in  flamerobin.bkl  flamerobin.cbp  flamerobin.dsp  flamerobin.dsw  flamerobin.sln  flamerobin_flamerobin.dsp  flamerobin_flamerobin.vcproj  flamerobin_flamerobin.vcxproj  flamerobin_flamerobin.vcxproj.filters  flamerobin_ibpp.dsp  flamerobin_ibpp.vcproj  flamerobin_ibpp.vcxproj  flamerobin_ibpp.vcxproj.filters  frconfig.h  frconfig.h.in  (+13 more)
.agents/: AGENTS.md
.github/: codeql-config.yml  copilot-instructions.md
Bakefiles/: Bakefiles.bkgen  flamerobin.bkl  wxtemplate.bkl
cmake/: firebirdConfig.cmake
code-templates/: create_change_trigger.confdef  create_change_trigger.info  create_change_trigger.template  create_selectable_execute_block.confdef  create_selectable_execute_block.info  create_selectable_execute_block.template  create_selectable_procedure.confdef  create_selectable_procedure.info  create_selectable_procedure.template  create_trigger.confdef  create_trigger.info  create_trigger.template  delete.template  extract_full_ddl.info  extract_full_ddl.template  insert.confdef  insert.info  insert.template  select.confdef  select.info  select.template  template_info.confdef  update.confdef  update.info  update.template
conf-defs/: db_settings.confdef  fr_settings.confdef
confdefs/: db_settings.confdef  fr_settings.confdef
devdocs/: BCC_How_to_build.txt  Creating_Linux_Packages.txt  Dev-Cpp_How_to_build.txt  Files_and_paths.txt  GCC_How_to_build.txt  MSVC.NET_How_to_build.txt  MetadataItem_invalidation.txt  license_boilerplate.txt  memory_leaks_roadmap.md
docs/: crashpad_howto.md  firebird4_database_encryption.md  firebird4_read_consistency.md  firebird4_replication_monitoring.md  firebird4_sql_syntax_highlighting.md  firebird5_lateral_join.md  firebird5_merge_support.md  firebird5_multiple_row_returning.md  firebird5_ods_upgrade.md  firebird5_parallel_operations.md  firebird5_partial_indexes.md  firebird5_profiler.md  firebird5_skip_locked.md  firebird6_enhanced_security.md  firebird6_explain.md  firebird6_greatest_least.md  firebird6_json_functions.md  firebird6_named_arguments.md  firebird6_sql_security.md  firebird6_unlist_any_value.md  firebird_embedded.md  flamerobin.1  fr_license.html  fr_manual.html  fr_whatsnew.html  html.css  mcp_howto.md  migration-to-fb-cpp.md  portable_release.md
docs-src/: fr_license.txt  fr_manual.xml
flamerobin.xcodeproj/: project.pbxproj
flatpak/: build-flatpak.sh  org.flamerobin.FlameRobin.yml
html-templates/: ALLloading.html  COLLATION.html  DATABASE.html  DATABASEtriggers.html  DDL.html  DOMAIN.html  EXCEPTION.html  EXCEPTIONprivileges.html  FUNCTION.html  GENERATOR.html  GENERATORprivileges.html  INDEX.html  PACKAGE.html  PACKAGEprivileges.html  PROCEDURE.html  PROCEDUREprivileges.html  PUBLICATION.html  ROLE.html  ROLEprivileges.html  SEQUENCE.html  SERVER.html  TABLE.html  TABLEconstraints.html  TABLEindices.html  TABLEprivileges.html  TABLEtriggers.html  TEMPLATE_TABLE_010_Select  TEMPLATE_TABLE_020_Insert  TEMPLATE_TABLE_050_Selectable EXECUTE BLOCK  TRIGGER.html  UDF.html  USER.html  USERS_COLLECTION.html  VIEW.html  VIEWprivileges.html  VIEWtriggers.html  dependencies.html  header.html
msw/: flamerobin.dsp  flamerobin.dsw  makefile.bcc  makefile.vc
res/: COPYING  DDLTrigger.xpm  DMLTrigger.xpm  LGPL  UDF.xpm  UDFs.xpm  backup.xpm  characterset.xpm  charactersets.xpm  collation.xpm  collations.xpm  column.xpm  column32.xpm  config_options.xml  database.xpm  database32.xpm  databaseserver.xpm  dbtrigger.xpm  dbtriggers.xpm  ddltrigger.xpm  ddltriggers.xpm  delete16.xpm  delete24.xpm  dmltrigger.xpm  dmltriggers.xpm  domain.xpm  domain32.xpm  down.xpm  exception16_png.cpp  execute16.xpm  execute24.xpm  fk16_png.cpp  flamerobin.Info.plist  flamerobin.desktop  flamerobin.exe.Manifest  flamerobin.icns  flamerobin.rc  flamerobin.xpm  folder.xpm  foldero.xpm  (+74 more)
snap/: snapcraft.yaml
sql-templates/: TABLE_010_Select  TABLE_020_Insert  TABLE_030_Update  TABLE_040_Selectable procedure  TABLE_050_Selectable EXECUTE BLOCK  TABLE_055_Change trigger  TABLE_060_Full DDL  TEMPLATE_TABLE_060_Full DDL  common.confdef  create_change_trigger.confdef  create_change_trigger.info  create_change_trigger.sql  create_selectable_execute_block.confdef  create_selectable_execute_block.info  create_selectable_execute_block.sql  create_selectable_procedure.confdef  create_selectable_procedure.info  create_selectable_procedure.sql  extract_full_ddl.conf  insert.confdef  insert.info  insert.sql  select.conf  select.confdef  select.info  select.sql  template_info.confdef  update.conf  update.confdef  update.sql
src/: BaseDialog.cpp  BaseDialog.h  BaseFrame.cpp  BaseFrame.h  DatabaseRegistrationInfoFrame.cpp  DatabaseRegistrationInfoFrame.h  DatabaseRegistrationInfoFrameImpl.cpp  ExecuteSqlFrame.cpp  ExecuteSqlFrame.h  ExecuteSqlFrameImpl.cpp  FieldPropertiesFrame.cpp  FieldPropertiesFrame.h  FieldPropertiesFrameImpl.cpp  Isaac.h  MainFrame.cpp  MainFrame.h  MainFrameImpl.cpp  MasterPassword.cpp  MasterPassword.h  MetadataItemPropertiesDialog.cpp  MetadataItemPropertiesDialog.h  MetadataItemPropertiesDialogImpl.cpp  MultilineEnterDialog.cpp  MultilineEnterDialog.h  ReorderFieldsDialog.cpp  ReorderFieldsDialog.h  (+64 more)
src/engine/db/fbcpp/patches/fb-cpp/: Attachment.cpp  Attachment.h  BackupManager.cpp  Batch.cpp  Batch.h  Blob.cpp  Blob.h  CMakeLists.txt  CalendarConverter.h  Client.cpp  Client.h  Descriptor.h  EventListener.cpp  EventListener.h  Exception.cpp  Exception.h  NumericConverter.h  Row.h  RowSet.cpp  RowSet.h  ServiceManager.cpp  ServiceManager.h  SmartPtrs.h  Statement.cpp  Statement.h  StructBinding.h  Transaction.cpp  Transaction.h  VariantTypeTraits.h  config.h  fb-api.h  fb-cpp.h  types.h
(+592 files in other folders)
